--- a/frontend/css/map.css
+++ b/frontend/css/map.css
@@ -1,9 +1,17 @@
+body {
+    background-color: #31393C;
+}
+
 #map {
     height: 60%;
     /* The height is 400 pixels */
     width: 100%;
     /* The width is the width of the web page */
+    border-radius: 10px;
 }
+
+
+
 
 #instruction {
     margin: 10px;
@@ -45,6 +53,27 @@
     height: 26px;
 }
 
+#distanceContainer {
+    margin-top: 25px;
+}
+
+#distanceContainer > label {
+    display: block;
+    color: white;
+    font-size: 1.2em;
+}
+
+#maxDistanceInp {
+    padding: 10px;
+    margin: 10px;
+    border: 1px solid;
+    border-radius: 10px;
+}
+
+#distanceContainer > span {
+    color: white;
+}
+
 #containerShowRoute > button {
     margin: 10px;
     background-color: #0f81dc;
@@ -69,21 +98,28 @@
     width: 35px;
 }
 
-#btnStartTrip { 
+
+
+#btnStartTrip, #btnArrived, #distanceContainer { 
     text-align:  center;
 }
 
-#btnStartTrip > button {
-    margin: 30px;
-    background-color: #252d33;
+
+
+#btnStartTrip > button, #btnArrived > button {
+    margin: 10px 30px;
+    background-color: #07867a;
     color: white;
     border: none;
     outline: none;
-    width: 165px;
-    height: 60px;
+    width: 190px;
+    height: 50px;
     border-radius: 20px;
     box-shadow: rgb(0 0 0 / 30%) 0px 1px 4px;
-    font-size: large;
+    font-size: medium;
     letter-spacing: 2px;
 }
+
+
+
 
