--- a/frontend/css/styles.css
+++ b/frontend/css/styles.css
@@ -154,8 +154,9 @@ html, body {
 }
 
 .top-text span {
-    font-weight: 300;
-    font-size: 25px;
+    font-weight: 200;
+    opacity: 60%;
+    font-size: 15px;
     vertical-align: text-top;
     color: white;
 }
